--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/avatar-1.ico" type="image/x-icon">
 
   <!--
     - custom css link
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/avatar-1.png" alt="Smit Bhuva" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Smit Bhuva</h1>
+          <h1 class="name" title="Smit Bhuva">Smit Bhuva</h1>
 
           <p class="title">Data Analyst, GIS analyst</p>
         </div>
