--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
                   <img src="./assets/images/cumin.png" alt="Cumin yield" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Cumin yield Prediction</h3>
+                <h3 class="project-title">Soil Nutrient Analysis</h3>
 
                 <p class="project-category">GIS analysis</p>
 
