--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <h4 class="h4 service-item-title">Data science</h4>
 
                 <p class="service-item-text">
-                  Professional development machine learning and deep learning models.
+                  Development of machine learning and deep learning models.
                 </p>
               </div>
 
