--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
 
           </ul> -->
 
-          <div class="filter-select-box">
+<!--           <div class="filter-select-box">
 
             <button class="filter-select" data-select>
 
@@ -833,7 +833,7 @@
 
             </ul>
 
-          </div>
+          </div> -->
 
           <ul class="project-list">
 
