--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
 
           <div class="filter-select-box">
 
-            <button class="filter-select" data-select>
+<!--             <button class="filter-select" data-select>
 
               <div class="select-value" data-selecct-value>Select category</div>
 
@@ -807,7 +807,7 @@
                 <ion-icon name="chevron-down"></ion-icon>
               </div>
 
-            </button>
+            </button> -->
 
             <ul class="select-list">
 
