--- a/index.html
+++ b/index.html
@@ -797,9 +797,9 @@
 
           </ul> -->
 
-          <div class="filter-select-box">
+<!--           <div class="filter-select-box">
 
-<!--             <button class="filter-select" data-select>
+            <button class="filter-select" data-select>
 
               <div class="select-value" data-selecct-value>Select category</div>
 
@@ -807,7 +807,7 @@
                 <ion-icon name="chevron-down"></ion-icon>
               </div>
 
-            </button> -->
+            </button>
 
             <ul class="select-list">
 
@@ -833,7 +833,7 @@
 
             </ul>
 
-          </div>
+          </div> -->
 
           <ul class="project-list">
 
