--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
 
         <section class="projects">
 
-<!--           <ul class="filter-list">
+          <ul class="filter-list">
 
             <li class="filter-item">
               <button class="active" data-filter-btn>All</button>
@@ -795,7 +795,7 @@
               <button data-filter-btn>Mobile Photography</button>
             </li>
 
-          </ul> -->
+          </ul>
 
           <div class="filter-select-box">
 
