--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
               <span>2023 — Present</span>
 
               <p class="timeline-text">
-                M.Sc. Agriculture Analytics - A well designed program, which is in collaboration with Indian Institute
+                M.Sc. Agriculture Analytics - A well-designed program, which is in collaboration with Indian Institute
                 of Remote Sensing (IIRS) and Anand Agricultural University (AAU)
               </p>
 
@@ -549,7 +549,7 @@
               <span>2019 — 2023</span>
 
               <p class="timeline-text">
-                B.Sc. (Hons.) Agriculture - A comprehensive theoritical and practical knowledge related to all the
+                B.Sc. (Hons.) Agriculture - A comprehensive theoretical and practical knowledge related to all the
                 branches of Agriculture.
               </p>
 
@@ -562,7 +562,7 @@
               <span>2016 — 2017</span>
 
               <p class="timeline-text">
-                12th Science - Gujarat Secondary and Heigher Secondary Education Board
+                12th Science - Gujarat Secondary and Higher Secondary Education Board
               </p>
 
             </li>
@@ -946,20 +946,20 @@
               </a>
             </li>
 
-            <!-- <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="GIS analysis">
+              <a href="https://github.com/SmitBhuva-99/Web_GIS_basics_project", target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/cumin.png" alt="Cumin yield" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Summary</h3>
+                <h3 class="project-title">Map visualisation - A Web GIS project</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">GIS analysis</p>
 
               </a>
             </li>
