--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/cumin.png" alt="Cumin yield" loading="lazy">
+                  <img src="./assets/images/project-web-gis.png" alt="Web GIS" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Map visualisation - A Web GIS project</h3>
