--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+<!--             <li class="project-item  active" data-filter-item data-category="applications">
               <a href="#">
 
                 <figure class="project-img">
@@ -980,7 +980,7 @@
                 <p class="project-category">Applications</p>
 
               </a>
-            </li> -->
+            </li> --> -->
 
             <li class="project-item  active" data-filter-item data-category="Mobile Photography">
               <a href="https://www.playbook.com/s/smit-bhuva/clicks", target="_blank">
