--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:smitbhuva711@gmail.com" class="contact-link">smitbhuva711@gmail.com</a>
+              <a href="mailto:smitpatel2745@gmail.com" class="contact-link">smitbhuva711@gmail.com</a>
             </div>
 
           </li>
