--- a/index.html
+++ b/index.html
@@ -954,23 +954,41 @@
               </a>
             </li>
 
-            <!-- <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://github.com/Smit-Bhuva/Soil_Properties_Estimation">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
+                  <img src="./assets/images/EC.jpg" alt="Soil Properties Estimation" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Task Manager</h3>
+                <h3 class="project-title">Soil Properties Estimation</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">GIS Analysis</p>
 
               </a>
-            </li> -->
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="applications"></li>
+              <a href="https://github.com/Smit-Bhuva/Soil_Erosion_Mapping">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Soil Loss Classes.png" alt="Soil Erosion Mapping" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Soil Erosion Mapping</h3>
+
+                <p class="project-category">GIS Analysis</p>
+
+              </a>
+            </li>
 
             <li class="project-item  active" data-filter-item data-category="Mobile Photography">
               <a href="https://www.playbook.com/s/smit-bhuva/clicks" , target="_blank">
