--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:smitpatel2745@gmail.com" class="contact-link">smitbhuva711@gmail.com</a>
+              <a href="mailto:smitpatel2745@gmail.com" class="contact-link">smitpatel2745@gmail.com</a>
             </div>
 
           </li>
@@ -130,6 +130,12 @@
           <li class="social-item">
             <a href="https://www.linkedin.com/in/smit-bhuva-a6349625a/" , target="_blank" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="https://www.fiverr.com/smit_patel_09?up_rollout=true" , target="_blank" class="social-link">
+              <ion-icon name="logo-fiverr"></ion-icon>
             </a>
           </li>
 
