--- a/index.html
+++ b/index.html
@@ -988,7 +988,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="Mobile Photography">
-              <a href="https://www.playbook.com/s/smit-bhuva/clicks" , target="_blank">
+              <a href="https://www.instagram.com/_captures_by_smit_/" , target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
