--- a/index.html
+++ b/index.html
@@ -197,16 +197,23 @@
 
         <section class="about-text">
           <p>
-            I'm a Data Analyst and GIS Analyst from Junagadh, Gujarat, India, working in data analysis and geographic
-            information systems. I enjoy turning complex data into simple, beautiful and insightful visualizations
+<!--             I'm a Data Analyst and GIS Analyst from Junagadh, Gujarat, India, working in data analysis and geographic
+            information systems. I enjoy turning complex data into simple, beautiful and insightful visualizations -->
+            I'm a Quality Engineer at Zeus Learning, Mumbai, specializing in software quality assurance. My expertise 
+            includes manual testing and I am currently learning BDD (Behavior Driven Development) methods using Playwright 
+            for automation testing. I am passionate about ensuring software reliability and delivering seamless user experiences.
           </p>
 
           <p>
-            My job is to analyze large and complex datasets to identify trends, patterns, and insights. I develop and
+<!--             My job is to analyze large and complex datasets to identify trends, patterns, and insights. I develop and
             maintain dashboards, reports, and visualizations to help stakeholders make data-driven decisions. Moreover,
             I use GIS tools and techniques to gather, analyze, and visualize geospatial data. My aim is to bring
             insights and intelligence to your organization in the most creative way. I have worked on data analysis and
-            GIS projects for many companies in Junagadh and across Gujarat.
+            GIS projects for many companies in Junagadh and across Gujarat. -->
+            Alongside my full-time role, I continue to explore data analysis and GIS as a part-time learner. I enjoy turning
+            complex data into simple, insightful visualizations and have experience analyzing large datasets, developing dashboards,
+            and working with geospatial data. My goal is to bring technical excellence and creative problem-solving to every project 
+            I undertake.
           </p>
         </section>
 
@@ -280,6 +287,38 @@
 
                 <p class="service-item-text">
                   I make high-quality photos of any category at a professional level.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/Manual-Testing.png" alt="Manual Testing" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Manual Testing</h4>
+
+                <p class="service-item-text">
+                  Ensuring software quality through detailed manual test case execution.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/Automation-Testing.png" alt="Automation Testing" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Automation Testing</h4>
+
+                <p class="service-item-text">
+                  Automating test cases for faster, consistent software quality assurance.
                 </p>
               </div>
 
@@ -571,7 +610,7 @@
 
         </section>
 
-        <!-- <section class="timeline">
+        <section class="timeline">
 
           <div class="title-wrapper">
             <div class="icon-box">
@@ -585,33 +624,29 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Quality Engineer</h4>
 
-              <span>2015 — Present</span>
+              <span>June 2025 — Present</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Zeus Learning, Mumbai, Maharastra.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Quality Engineering Intern</h4>
 
-              <span>2013 — 2015</span>
+              <span>Jan 2025 - May 2025</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Zeus Learning, Mumbai, Maharastra.
               </p>
 
             </li>
 
-            <li class="timeline-item">
+<!--             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Web designer</h4>
 
@@ -623,17 +658,43 @@
                 exceptur.
               </p>
 
-            </li>
+            </li> -->
 
           </ol>
 
-        </section> -->
+        </section>
 
         <section class="skill">
 
           <h3 class="h3 skills-title">My skills</h3>
 
           <ul class="skills-list content-card">
+            
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Manual Testing</h5>
+                <data value="50">50%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 50%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Automation Test Scripting</h5>
+                <data value="25">25%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 25%;"></div>
+              </div>
+
+            </li>
 
             <li class="skills-item">
 
@@ -780,6 +841,14 @@
             </li>
 
             <li class="filter-item">
+              <button data-filter-btn>Manual Testing</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>Automation Testing</button>
+            </li>
+
+            <li class="filter-item">
               <button data-filter-btn>Mobile Photography</button>
             </li>
 
@@ -813,6 +882,14 @@
 
               <li class="select-item">
                 <button data-select-item>GIS analysis</button>
+              </li>
+
+              <li class="filter-item">
+                <button data-filter-btn>Manual Testing</button>
+              </li>
+
+              <li class="filter-item">
+                <button data-filter-btn>Automation Testing</button>
               </li>
 
               <li class="select-item">
