--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
           - testimonials modal
         -->
 
-        <div class="modal-container" data-modal-container>
+<!--         <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
@@ -474,7 +474,7 @@
 
           </section>
 
-        </div>
+        </div> -->
 
 
         <!--
@@ -543,6 +543,46 @@
           <h2 class="h2 article-title">Resume</h2>
         </header>
 
+         <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Experience</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Quality Engineer</h4>
+
+              <span>June 2025 — Present</span>
+
+              <p class="timeline-text">
+                Zeus Learning, Mumbai, Maharastra.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Quality Engineering Intern</h4>
+
+              <span>Jan 2025 - May 2025</span>
+
+              <p class="timeline-text">
+                Zeus Learning, Mumbai, Maharastra.
+              </p>
+
+            </li>
+
+          </ol>
+
+        </section>
+
         <section class="timeline">
 
           <div class="title-wrapper">
@@ -605,60 +645,6 @@
               </p>
 
             </li>
-
-          </ol>
-
-        </section>
-
-        <section class="timeline">
-
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
-            </div>
-
-            <h3 class="h3">Experience</h3>
-          </div>
-
-          <ol class="timeline-list">
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Quality Engineer</h4>
-
-              <span>June 2025 — Present</span>
-
-              <p class="timeline-text">
-                Zeus Learning, Mumbai, Maharastra.
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Quality Engineering Intern</h4>
-
-              <span>Jan 2025 - May 2025</span>
-
-              <p class="timeline-text">
-                Zeus Learning, Mumbai, Maharastra.
-              </p>
-
-            </li>
-
-<!--             <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Web designer</h4>
-
-              <span>2010 — 2013</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-
-            </li> -->
 
           </ol>
 
