Fix: convert filter section into drop down.

--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
 
         <section class="projects">
 
-          <ul class="filter-list">
+          <!-- <ul class="filter-list">
 
             <li class="filter-item">
               <button class="active" data-filter-btn>All</button>
@@ -884,7 +884,22 @@
 
             </ul>
 
+          </div> -->
+
+          <div class="filter-dropdown">
+            <label for="category-select">Select Category</label>
+            <select id="category-select" class="filter-select">
+              <option value="all">All</option>
+              <option value="data analysis">Data analysis</option>
+              <option value="data science">Data science</option>
+              <option value="gis analysis">GIS analysis</option>
+              <option value="manual testing">Manual Testing</option>
+              <option value="automation testing">Automation Testing</option>
+              <option value="mobile photography">Mobile Photography</option>
+            </select>
           </div>
+
+
 
           <ul class="project-list">
 
