Update Designation on home page

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
         <div class="info-content">
           <h1 class="name" title="Smit Bhuva">Smit Bhuva</h1>
-
-          <p class="title">Data Analyst, GIS analyst</p>
+          <p class="title">Quality Engineer @ Zeus Learning</p>
+          <p class="title">Freelance Data Analyst and GIS analyst</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
