Update Masters degree end year

--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
               <h4 class="h4 timeline-item-title">Dhirubhai Ambani Institute of Information and Communication Technology
                 (DA-IICT)</h4>
 
-              <span>2023 — Present</span>
+              <span>2023 — 2025</span>
 
               <p class="timeline-text">
                 M.Sc. Agriculture Analytics - A well-designed program, which is in collaboration with Indian Institute
